--- a/login-app/styles/global.css
+++ b/login-app/styles/global.css
@@ -51,6 +51,11 @@ header {
     padding-left: 1.5%;
 }
 
+#title{
+    font-size: 2em;
+}
+
+
 footer {
     background-color: #333;
     color: white;
@@ -59,6 +64,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin-top: 1%;
+    height: 7em;
 }
 footer div{
     text-align: center;
@@ -68,10 +74,13 @@ a{
     text-decoration: none;
     color: #0077ff;
 }
+a:hover{
+    text-decoration: underline;
+}
 
 #github{
-    font-size: 20px;
-    margin-right: 1%;
+    font-size: 1.3em;
+    margin-right: 0.5%;
 }
 #github a{
     color: #0077ff;
